<resources>
    <string name="app_name">Drifting</string>
    <string name="login_account">输入账号</string>
    <string name="login_password">输入密码</string>
    <string name="login">登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inviting_title">来自XX的漂流XX</string>
    <string name="drifting_book_playing_method">玩法：\n游戏分为熟人模式和生人模式\n选择您所需的模式，进行漂流活动吧！\n注意：半途而废者，将受到系统的惩罚哦~</string>
    <string name="drifting_camera_playing_method">玩法：\n游戏分为熟人模式和生人模式\n选择您所需的模式，进行漂流活动吧！\n注意：半途而废者，将受到系统的惩罚哦~</string>
    <string name="drifting_book_Ongoing">您当前正在进行的漂流本活动：\n《xxxxx》\n《xxxxxxx》</string>
    <string name="drifting_camera_Ongoing">您当前正在进行的漂流相机活动：\n《xxxxx》\n《xxxxxxx》</string>
    <string name="drifting_book_over">您已经完成的漂流本活动:\n《xxxxxxx》\n《xxxxxxxx》</string>
    <string name="drifting_camera_over">您已经完成的漂流相机活动:\n《xxxxxxx》\n《xxxxxxxx》</string>
    <string name="drifting_drafts">草稿箱：\n《xxxxxxx》\n《xxxxxxxxx》</string>
    <string name="drifting_book_name">输入名称</string>
    <string name="drifting_book_theme">输入主题</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_drawing_start">Drawing_Start</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_itmes_manager">Itmes_manager</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>