<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drifting_book_playing_method"
        android:textSize="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|right"
        android:text="@string/drifting_book_Ongoing"
        android:textSize="12dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drifting_book_over"
        android:textSize="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drifting_drafts"
        android:textSize="15dp"
        android:gravity="center|center_horizontal|right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="    创建我的漂流本:"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="140dp"
            android:layout_height="53dp"
            android:layout_marginLeft="95dp"
            android:text="熟人模式"
            android:textSize="20dp"
            android:background="@drawable/shape_drifting_book_text"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="53dp"
            android:layout_marginLeft="95dp"
            android:text="生人模式"
            android:textSize="20dp"
            android:background="@drawable/shape_drifting_book_text"/>

    </LinearLayout>

</LinearLayout>