<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <ImageButton
            android:id="@+id/create_back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/back_create"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:background="@mipmap/background_create1">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drifting_book_playing_method"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:background="@mipmap/background_create2"
        android:layout_gravity="right"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|end"
            android:text="@string/drifting_book_Ongoing"
            android:textSize="12sp" />
    </LinearLayout>
   <LinearLayout
       android:layout_width="180dp"
       android:layout_height="90dp"
       android:background="@mipmap/background_create3"
       android:layout_marginLeft="15dp">
       <TextView
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/drifting_book_over"
           android:textSize="12sp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:background="@mipmap/background_create4"
        android:layout_gravity="right"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drifting_drafts"
            android:textSize="15sp"
            android:gravity="center|center_horizontal|end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@mipmap/background_create5"
        android:layout_marginLeft="15dp">

        <TextView

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="创建我的漂流本:"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/acquaintance_mode"
            android:layout_width="140dp"
            android:layout_height="53dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:text="熟人模式"
            android:textSize="20sp"
            android:background="@drawable/shape_drifting_book_text"/>

        <Button
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/stranger_mode"
            android:layout_width="140dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:text="生人模式"
            android:textSize="20sp"
            android:background="@drawable/shape_drifting_book_text"/>

    </LinearLayout>

</LinearLayout>