<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/create_3" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/create_2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="800dp"
            android:layout_height="350dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="550dp"
            android:background="@drawable/create_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/create_6" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/create_5" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/create_4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"
        android:text="@string/drifting_camera_playing_method"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="230dp"
        android:text="@string/drifting_camera_Ongoing"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="350dp"
        android:text="@string/drifting_camera_over"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="440dp"
        android:gravity="center"
        android:text="@string/drifting_drafts"
        android:textSize="15sp" />


    <TextView

        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="560dp"
        android:text="创建我的漂流xx:"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/acquaintance_mode"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/shape_drifting_book_text"
        android:text="熟人模式"
        android:textSize="20sp" />

    <Button
        android:id="@+id/stranger_mode"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="660dp"
        android:background="@drawable/shape_drifting_book_text"
        android:text="生人模式"
        android:textSize="20sp" />


</FrameLayout>